--- a/hackathon13-1/Hackathon13-1/src/main/res/values/strings.xml
+++ b/hackathon13-1/Hackathon13-1/src/main/res/values/strings.xml
@@ -4,5 +4,11 @@
     <string name="app_name">Hackathon13-1</string>
     <string name="action_settings">Settings</string>
     <string name="hello_world">Hello world!</string>
+    <string name="text_button_key_add">Add</string>
+    <string name="text_img_alt_add_image">Add image to post</string>
+    <string name="title_activity_new_note">Add Note</string>
+    <string name="text_hint_new_note">Snapping for</string>
+    <string name="text_hint_new_note_decsription">A few more words</string>
+    <string name="title_activity_single_note">MainActivity</string>
 
 </resources>
